fix the properties that define the spacing between UserDetails items

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,5 +8,5 @@
 }
 
 .user-item-details {
-    @apply flex flex-col lg:flex-row justify-between items-center p-4 mb-3 rounded-lg w-full border-2 border-solid border-zinc-200;
+    @apply flex flex-col lg:flex-row justify-between items-center lg:gap-0 h-20 py-3 lg:py-0 lg:px-3 rounded-lg w-full border-2 border-solid border-zinc-200;
 }
